--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   filter: drop-shadow(0 0 2em #747bff);
 }
 
+.container {
+  background: rgb(131, 58, 180);
+  background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+}
+
+.row {
+  max-width: 80em;
+  padding: 5px;
+  margin: 5px;
+}
+
+.input {
+  width: 15em;
+}
+
+.logo.solid {
+  width: auto;
+  max-width: 30em;
+  height: auto;
+  max-height: 16em;
+}
+
 .logo.solid:hover {
   filter: drop-shadow(0 0 2em #2f5d90);
 }
